2008-12-26  Arno Rehn  <arno@arnorehn.de>

	* kimonopluginfactory.cpp: If the interface string doesn't appear to contain
	  a namespace, prepend 'Qyoto' or 'Kimono' depending on the letter the string
	  is starting with.
	* kdehandlers.cpp: Add a marshaller for KService::List (which is a
	  QList<KSharedPtr<KService> >)

2008-12-23  Arno Rehn  <arno@arnorehn.de>

	* kimonopluginfactory.cpp: check for an existing root domain and reuse it.
	  Makes it possible to use Mono Plugins from within KDE-Mono applications.

2008-11-28  Richard Dale  <richard.j.dale@gmail.com>
	* Regenerate the KDateTime, KTimeZones and KSystemTimeZones classes so
	  the Spec subclasses are more complete and Dictionary<string, KTimeZone>
	  arg types are included.

2008-11-24  Arno Rehn  <arno@arnorehn.de>

	* Put the KSharedPtr marshaller in marshall_macros_kde.h

2008-10-29  Arno Rehn  <arno@arnorehn.de>

	* Don't let KIO::SlaveBase redirect SIGXCPU, since it's needed by
	  Mono's Boehm GC.

2008-10-27  Arno Rehn  <arno@arnorehn.de>

	* Add support for Mono based kio slaves by extending kimonopluginfactory.
	* Add a kio_monodoc example kio slave. It needs monodoc installed and
	  accessible through 'pkg-config --libs monodoc'.
	  You can then access the mono documentation by typing e.g.
	    monodoc:/T:System.Object
	    monodoc:/N:System.Reflection
	  in Konqueror's address bar or using kioclient from the command line.
	  Simply monodoc:/ will bring you to monodoc:/N:System

2008-08-13  Arno Rehn  <arno@arnorehn.de>

    * Make the KSharedPointer marshaller more generic and add one for
      KSharedPtr<KMimeType>.
    * Parse the main mono config after the domain was initialized. This
      fixes some libs being not found (like libc).

2008-08-05  Richard Dale  <richard.j.dale@gmail.com>

	* Make KApplication and KUniqueApplication partial classes and add the
	  code to set the 'qApp' global variable in *Extras.cs files instead of